# SL_DAY

./: README.md
daily/: manage.py  pyproject.toml
daily/daily_app/: admin.py  models.py  urls.py  views.py
daily/daily_app/migrations/: 0001_initial.py  0002_entrada.py
daily/daily_app/templates/daily_app/: base.xhtml  index.xhtml  topico.xhtml  topicos.xhtml
daily/daily_logs/: asgi.py  settings.py  urls.py  wsgi.py
